--- a/draft-scenarios/clash/race_for_the_dragon_isle.tex
+++ b/draft-scenarios/clash/race_for_the_dragon_isle.tex
@@ -65,7 +65,7 @@ Map:
   \item The Obelisk Map Tile must be the final tile each player discovers.
   \item Turns are played simultaneously until the first player teleports to \#F10.
   \item First player to teleport becomes the first player for the remainder of the game.
-  \item All players who teleport to \#F10 on the same turn as the first player lose all remaining \svg{movement}.
+  \item All players who teleport to \#F10 on the same turn as the first player (including the first player) lose all remaining \svg{movement}.
   \item Players cannot connect to another player's area.
   \item Blocked Fields on Starting Tiles count as inactive two-way Portals.
   \item The Obelisks on the Near Tiles are inactive two-way Portals.
