--- a/draft-scenarios/clash/race_for_the_dragon_isle.tex
+++ b/draft-scenarios/clash/race_for_the_dragon_isle.tex
@@ -62,7 +62,7 @@ If no Dragon Utopia has been captured by the end of Round 12, all players lose.
 \subsection*{\MakeUppercase{Additional Rules}}
 Map:
 \begin{itemize}
-  \item The Obelisk Map Tile must be the final tile each player discovers.
+  \item The Obelisk Map Tile must be the final Tile each player discovers.
   \item Turns are played simultaneously until the first player teleports to \#F10.
   \item First player to teleport becomes the first player for the remainder of the game.
   \item All players who teleport to \#F10 on the same turn as the first player (including the first player) lose all remaining \svg{movement}.
