unified style for starting units

--- a/draft-scenarios/clash/dragnarok.tex
+++ b/draft-scenarios/clash/dragnarok.tex
@@ -23,7 +23,7 @@
 
 \begin{itemize}
   \item A Pack of the two cheapest \svg{bronze} Units
-  \item A Few chosen \svg{bronze} Units
+  \item A Few of the most expensive \svg{bronze} Units
 \end{itemize}
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling, Mage Guild \textit{(Do not gain ``When Built'' bonus)}
