--- a/draft-scenarios/clash/race_for_the_dragon_isle.tex
+++ b/draft-scenarios/clash/race_for_the_dragon_isle.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Clash Scenario}{Race to Dragon Isle}{\images/dragon.png}
+\addscenariosection{1}{Clash Scenario}{Race to Dragon Isle}{\art/haste.png}
 
 \begin{multicols}{2}
 
@@ -101,8 +101,7 @@ Dragon Isle:
     \includegraphics[width=0.85\paperwidth, keepaspectratio]{\art/haste.png}
   };
   \centering
-  \node at (5.7, -9) {\includegraphics[scale=0.5]{\maps/race-for-the-dragon-isle.png}};
-  \node at (5.7, -15.5) {\footnotesize{\textbf{\MakeUppercase{DRAGON ISLE}}}};
-  \node at (14.5, -12.5) {\includegraphics[scale=0.5]{\maps/race-for-the-dragon-isle-start.png}};
-  \node at (14.5, -15.5) {\footnotesize{\textbf{\MakeUppercase{PLAYERS' STARTING TILE}}}};
+  \node at (9, -8) {\includegraphics[width=0.8\paperwidth]{\maps/race-for-the-dragon-isle.png}};
+  \node at (6.7, -15.5) {\footnotesize{\textbf{\MakeUppercase{Dragon Isle}}}};
+  \node at (14.1, -15.5) {\footnotesize{\textbf{\MakeUppercase{Players' Starting Tiles}}}};
 \end{tikzpicture}
