--- a/draft-scenarios/clash/race_for_the_dragon_isle.tex
+++ b/draft-scenarios/clash/race_for_the_dragon_isle.tex
@@ -97,8 +97,8 @@ Dragon Isle:
 \end{multicols}
 
 \begin{tikzpicture}[overlay]
-  \node(bg)[anchor=center, opacity=0.07, xshift=-3em, yshift=-17em] at (current page.south) {
-    \includegraphics[width=0.85\paperwidth, keepaspectratio]{\art/haste.png}
+  \node(bg)[anchor=center, opacity=0.1, xshift=-3em, yshift=-17em] at (current page.south) {
+    \includegraphics[width=0.87\paperwidth, keepaspectratio]{\art/air_magic.png}
   };
   \centering
   \node at (9, -8) {\includegraphics[width=0.8\paperwidth]{\maps/race-for-the-dragon-isle.png}};
