--- a/draft-scenarios/clash/race_for_the_dragon_isle.tex
+++ b/draft-scenarios/clash/race_for_the_dragon_isle.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Clash Scenario}{Race to Dragon Isle}{\art/haste.png}
+\addscenariosection{1}{Clash Scenario}{Race for the Dragon Isle}{\art/haste.png}
 
 \begin{multicols}{2}
 
