--- a/draft-scenarios/clash/race_for_the_dragon_isle.tex
+++ b/draft-scenarios/clash/race_for_the_dragon_isle.tex
@@ -84,13 +84,13 @@ Dragon Isle:
 
 \svg{bronze} Young Dragon:
 \begin{itemize}
-  \item 3 \svg{attack}, 1 \svg{defense}, 3 \svg{health_points}, 6 \svg{initiative}
+  \item \svg{unit_flying} and \svg{unit_ranged}, 3 \svg{attack}, 1 \svg{defense}, 3 \svg{health_points}, 6 \svg{initiative}
   \item \svg{permanent} Ignore the Combat penalty against adjacent Units.
 \end{itemize}
 
 \svg{silver} Mature Dragon:
 \begin{itemize}
-  \item 4 \svg{attack}, 1 \svg{defense}, 5 \svg{health_points}, 8 \svg{initiative}
+  \item \svg{unit_flying}, 4 \svg{attack}, 1 \svg{defense}, 5 \svg{health_points}, 8 \svg{initiative}
   \item \svg{unit_attack} After the first attack, attack all other adjacent Units with 2 \svg{attack}.
 \end{itemize}
 
