--- a/draft-scenarios/clash/race_for_the_dragon_isle.tex
+++ b/draft-scenarios/clash/race_for_the_dragon_isle.tex
@@ -88,9 +88,9 @@ Dragon Isle:
   \item \svg{permanent} Ignore the Combat penalty against adjacent Units.
 \end{itemize}
 
-\svg{silver} Mature Dragon:
+\svg{silver} Mature Dragon \svg{unit_flying}:
 \begin{itemize}
-  \item \svg{unit_flying}, 4 \svg{attack}, 1 \svg{defense}, 5 \svg{health_points}, 8 \svg{initiative}
+  \item 4 \svg{attack}, 1 \svg{defense}, 5 \svg{health_points}, 8 \svg{initiative}
   \item \svg{unit_attack} After the first attack, attack all other adjacent Units with 2 \svg{attack}.
 \end{itemize}
 
