--- a/draft-scenarios/clash/race_for_the_dragon_isle.tex
+++ b/draft-scenarios/clash/race_for_the_dragon_isle.tex
@@ -82,9 +82,9 @@ Dragon Isle:
   \item Add 1 × \svg{bronze} and 1 × \svg{silver} Special Dragon Unit to all Level VII Combats.
 \end{itemize}
 
-\svg{bronze} Young Dragon:
+\svg{bronze} Young Dragon \svg{unit_ranged}:
 \begin{itemize}
-  \item \svg{unit_flying} and \svg{unit_ranged}, 3 \svg{attack}, 1 \svg{defense}, 3 \svg{health_points}, 6 \svg{initiative}
+  \item 3 \svg{attack}, 1 \svg{defense}, 3 \svg{health_points}, 6 \svg{initiative}
   \item \svg{permanent} Ignore the Combat penalty against adjacent Units.
 \end{itemize}
 
