--- a/draft-scenarios/coops/the_ambushed_accord.tex
+++ b/draft-scenarios/coops/the_ambushed_accord.tex
@@ -95,7 +95,7 @@ End of \textbf{\nth{13} Round:}
   \begin{tabularx}{0.93\linewidth}{p{0.28\linewidth}X}
     \darkcell[1.6]{Difficulty} & \darkcell[1.6]{Changes to Timed Event Fights} \\
     \darkcell[1.6]{Easy}
-    & \lightcell[1.6]{Remove a Unit from every Timed Event Fights.} \\
+    & \lightcell[1.6]{Remove a Unit from every Timed Event Fight.} \\
     \darkcell[1.6]{Normal}
     & \lightcell[1.6]{No Change} \\
     \darkcell[2.2]{Hard}
