Added Naval battle reference for stack token.

--- a/draft-scenarios/coops/the_ambushed_accord.tex
+++ b/draft-scenarios/coops/the_ambushed_accord.tex
@@ -99,12 +99,13 @@ End of \textbf{\nth{13} Round:}
     \darkcell[1.6]{Normal}
     & \lightcell[1.6]{No Change} \\
     \darkcell[2.2]{Hard}
-    & \lightcell[2.2]{Add an Initiative Stack Token to a random Unit of the fights on Rounds 4, 7 and 9.} \\
+    & \lightcell[2.2]{Add an Initiative Stack Token* to a random Unit of the fights on Rounds 4, 7 and 9.} \\
     \darkcell[1.8]{Impossible}
-    & \lightcell[1.8]{Add two random Stack Tokens to two Units in all fights.} \\
+    & \lightcell[1.8]{Add two random Stack Tokens* to two Units in all fights.} \\
   \end{tabularx}
   \medskip
 }
+\small{*See Naval-Battles Mission Book for details}
 \end{multicols}
 \begin{tikzpicture}[overlay]
   \centering
