--- a/draft-scenarios/coops/the_ambushed_accord.tex
+++ b/draft-scenarios/coops/the_ambushed_accord.tex
@@ -17,7 +17,7 @@ Out of the mist, enemy armies struck with deadly precision. Someone had betrayed
 
 \textbf{Starting Resources:} 2 \svg{gold}, 3 \svg{building_materials}, 1 \svg{valuables}
 
-\textbf{Starting Income:} 10 \svg{gold}, 0 \svg{building_materials}, 0 \svg{valuables}
+\textbf{Starting Income:} 10 \svg{gold}, 2 \svg{building_materials}, 0 \svg{valuables}
 
 \textbf{Starting Units:}
 
@@ -30,6 +30,8 @@ Out of the mist, enemy armies struck with deadly precision. Someone had betrayed
 \textbf{Town Buildings:} City Hall
 
 \textbf{Map Tile Pool:} Every player takes 2 random Far (II-III) Map Tiles and 2 random Near (IV-V) Map Tiles.
+
+\textbf{Obelisk:} Roll \svg{resource} and \svg{treasure} then resolve 1.
 
 \subsection*{\MakeUppercase{Map Setup}}
 Take the following Map Tiles ($P$ stands for the number of players) and arrange them as shown in the Scenario map layout:
@@ -83,7 +85,7 @@ End of \textbf{\nth{13} Round:}
 \begin{itemize}
   \item Collaboratively pay $P$~×~5~\svg{gold}, $P$~×~3~\svg{building_materials} and $P$~×~\svg{valuables} to reveal the Center Map Tile ($P$ stands for the number of players), e.g., 4 players must pay 20~\svg{gold}, 12~\svg{building_materials}, and 4~\svg{valuables}.
   \item At the end of every Astrologers Round, players must decide which player gets a free \svg{morale_positive}.
-  \item Players may exchange Artifacts and Spells from their hands, as well as Units and Resources, if their Main Heroes are standing on adjacent Fields or if both Heroes are in their own Towns.
+  \item Players may exchange Artifacts and Spells from their hands, as well as Units and Resources, if their Main Heroes are standing on adjacent Fields or if both Heroes are in their own Towns or on an obelisk.
   \item Once a player defeats the Level VII Neutral Army, their Heroes are removed from the Map.
     They are no longer eligible to fight Timed Event Fights.
 \end{itemize}
