--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -84,7 +84,7 @@ If no player has achieved an immediate victory, the player with the most Victory
 \begin{itemize}
   \item The Blocked Field on the Map Tile in the center is not considered blocked.
   \item \textbf{Sanctuary:} Search (2) your Deck. \textit{Visitable once per Faction}.
-  \item \textbf{Obelisk:} Guarded by Level VI Neutral Units. Search (2) \svg[8]{skill}, \svg{spellpower} or \svg{artifact}.
+  \item \textbf{Obelisk:} Guarded by Level VI Neutral Units. \\ \textbf{First to Flag:} Search (2) \svg[8]{skill}, \svg{spellpower} or \svg{artifact}.
   \item Each \textbf{blocked Field} adjacent to an Obelisk is a two-way Astral Gate, which only becomes active after that Obelisk has been visited.
   \item \textbf{Astral Gate:} Cannot be entered from a different Map Tile. When a Hero enters an Astral Gate, they are teleported to the Astral Gate on the Near Tile directly opposite the Center Tile. If that Tile is undiscovered, that player immediately discovers it.
   \item Gain 1 \svg{experience} after a Combat against an enemy Main Hero, unless one of the players Surrenders or Retreats.
@@ -99,7 +99,7 @@ If no player has achieved an immediate victory, the player with the most Victory
 \columnbreak
 
 \begin{itemize}
-  \item A defeated Main Hero may Empower one Defense Statistic Card from their M\&M Deck.
+  \item \textbf{Grail Token:} When gained, Search (4) \svg{artifact}. \svg{hand} Limit is increased by 3.
   \item \textbf{Level VII Settlement:} Increase all incomes by 1 space.
   \item \textbf{Random Town:} You may recruit one Faction Unit you defeated for half its recruitment cost or increase all incomes by one space.
   \item \textbf{Dragon Utopia:} Take any Card from your Discard pile. You may recruit one dragon you defeated for half its recruitment cost.
