--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -25,7 +25,7 @@ This Scenario plays out over 13 Rounds.
 
 \textbf{Town Buildings:}
 \begin{itemize}
-  \item Each player may build the \svg{building_special_tent} building at a discount of 2 \svg{gold} and 2 \svg{building_materials} \textbf{or} 4 \svg{gold}.
+ \item Each player may build the \svg{building_special_tent} building at a discount of 2 \svg{gold} and 2 \svg{building_materials} \textbf{or} gain 4 \svg{gold}.
   \item Citadel and -2 \svg{gold}  \textbf{or} \\ Mage Guild and 2 \svg{valuables}.
 \end{itemize}
 
