--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -73,7 +73,7 @@ If no player has achieved an immediate victory, the player with the most Victory
 \end{itemize}
 \textbf{\nth{10} Round:}
 \begin{itemize}
-  \item Player(s) whose Main Hero has the least \svg{experience}, gain \svg{resource} twice.
+  \item Player(s) whose Main Hero has the least \svg{experience}, roll and resolve \svg{resource} twice.
 \end{itemize}
 \textbf{\nth{12} Round:}
 \begin{itemize}
