--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -73,7 +73,7 @@ If no one controls a Dragon Utopia, all players lose.
 \end{itemize}
 \textbf{End of \nth{10} Round:}
 \begin{itemize}
-  \item The player(s) whose Main Hero has the least \svg{experience} gain \svg{resource} twice.
+  \item The player(s) whose Main Hero has the least \svg{experience} roll and resolve \svg{resource} twice.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
