--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -26,7 +26,8 @@ This Scenario plays out over 13 Rounds.
 \textbf{Town Buildings:}
 \begin{itemize}
   \item Each player may build the \svg{building_special_tent} building at a discount of 2~\svg{gold} and 2~\svg{building_materials}, \textbf{or} gain 4~\svg{gold}.
-  \item Citadel and -2 \svg{gold}  \textbf{or} \\ Mage Guild and 2 \svg{valuables}.
+  \item Citadel and gain 2~\svg{gold}, \textbf{or} \\
+    Mage Guild and gain 2~\svg{valuables}.
 \end{itemize}
 
 \textbf{Map Tile Pool:} Each player takes 3 Far (II–III) Map Tiles.
