--- a/draft-scenarios/clash/dragnarok.tex
+++ b/draft-scenarios/clash/dragnarok.tex
@@ -22,8 +22,8 @@
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item A Pack of the two cheapest \svg{bronze} Units
-  \item A Few of the most expensive \svg{bronze} Units
+  \item A ``Pack'' of the two cheapest \svg{bronze} Units
+  \item ``Few'' of the most expensive \svg{bronze} Units
 \end{itemize}
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling, Mage Guild \textit{(Do not gain ``When Built'' bonus)}
