starting units rephrasing

--- a/campaigns/castle_greek_gift.tex
+++ b/campaigns/castle_greek_gift.tex
@@ -28,7 +28,7 @@ This Scenario plays out over 8 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Few Halberdiers, a Few Marksmen
+  \item ``Few'' Halberdiers, ``Few'' Marksmen
 \end{itemize}
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling, Citadel
