--- a/campaigns/inferno_devilish_plan.tex
+++ b/campaigns/inferno_devilish_plan.tex
@@ -33,8 +33,8 @@ This Scenario plays out over 13 Rounds.
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item A Pack of Familiars
-  \item A Few Magogs
+  \item A ``Pack'' of Familiars
+  \item ``Few'' Magogs
 \end{itemize}
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling, City Hall
@@ -52,10 +52,10 @@ This Scenario plays out over 13 Rounds.
 \begin{itemize}
   \item \textbf{Army:}
     \begin{itemize}
-      \item A Pack of Gold Dragons
-      \item A Pack of Unicorns
-      \item A Pack of Dendroids
-      \item A Pack of Centaurs
+      \item A ``Pack'' of Gold Dragons
+      \item A ``Pack'' of Unicorns
+      \item A ``Pack'' of Dendroids
+      \item A ``Pack'' of Centaurs
     \end{itemize}
 \end{itemize}
 
