--- a/clash/trial_by_combat.tex
+++ b/clash/trial_by_combat.tex
@@ -19,7 +19,7 @@ This Scenario plays out over 8-10 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Few cheapest \svg{silver} Units
+  \item ``Few'' cheapest \svg{silver} Units
   \item A chosen Neutral \svg{bronze} Unit matching the player's Faction
 \end{itemize}
 
