--- a/coops/close_to_enemies.tex
+++ b/coops/close_to_enemies.tex
@@ -26,7 +26,7 @@ This Scenario is played over 7 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item  1 × A Few \svg{bronze} Units of your choice
+  \item ``Few'' of chosen \svg{bronze} Units
 \end{itemize}
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling
