--- a/coops/titans_stronghold.tex
+++ b/coops/titans_stronghold.tex
@@ -28,8 +28,8 @@ This Scenario is played over 16 Rounds (15 on Impossible difficulty).
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Pack of \svg{bronze} Units of your choice
-  \item A Few \svg{bronze} Units of your choice
+  \item A ``Pack'' of chosen \svg{bronze} Units
+  \item ``Few'' of chosen \svg{bronze} Units
 \end{itemize}
 
 \textbf{Town Buildings:} None
