--- a/draft-scenarios/campaigns/rampart_graduation_exercise.tex
+++ b/draft-scenarios/campaigns/rampart_graduation_exercise.tex
@@ -35,7 +35,7 @@ This Scenario plays out over 13 Rounds.
 
 \textbf{Starting Income:} 10 \svg{gold}, 0 \svg{building_materials}, 0 \svg{valuables}
 
-\textbf{Starting Units:} A Few Centaurs, a Few Dwarves, a Pack of Elves, a Few Pegasi
+\textbf{Starting Units:} ``Few'' Centaurs, ``Few'' Dwarves, a ``Pack'' of Elves, ``Few'' Pegasi
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling, \svg{silver} Dwelling, Mystic Pond
 
