--- a/draft-scenarios/alliances/brothers_in_arms.tex
+++ b/draft-scenarios/alliances/brothers_in_arms.tex
@@ -22,8 +22,8 @@
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item A Few of the cheapest \svg{bronze} Units
-  \item A Few of the cheapest \svg{silver} Units
+  \item ``Few'' of the cheapest \svg{bronze} Units
+  \item ``Few'' of the cheapest \svg{silver} Units
 \end{itemize}
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling
