--- a/draft-scenarios/alliances/gold_rush.tex
+++ b/draft-scenarios/alliances/gold_rush.tex
@@ -23,8 +23,8 @@ This Scenario is played over 13 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Pack of chosen \svg{bronze} Units
-  \item A Few cheapest \svg{silver} Units
+  \item A ``Pack'' of chosen \svg{bronze} Units
+  \item ``Few'' cheapest \svg{silver} Units
 \end{itemize}
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling, Citadel
