--- a/clash/dragoncurse_castle.tex
+++ b/clash/dragoncurse_castle.tex
@@ -27,7 +27,7 @@ This Scenario is played over a maximum of 11 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item 2 × A ``Few'' of the cheapest \svg{bronze} Units
+  \item 2 × ``Few'' of the cheapest \svg{bronze} Units
 \end{itemize}
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling
