--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -21,7 +21,7 @@ This Scenario plays out over 15 Rounds.
 
 \begin{itemize}
   \item A ``Pack'' of chosen \svg{bronze} Units
-  \item A chosen Neutral \svg{bronze} Unit from the player's Faction
+  \item A chosen Neutral \svg{bronze} Unit matching the player's Faction
 \end{itemize}
 
 \textbf{Town Buildings:}
