added last of few/pack fixes

--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -20,7 +20,7 @@ This Scenario plays out over 15 Rounds.
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item A ``Pack'' of chosen \svg{bronze} Units
+  \item A ``Pack'' of the most expensive \svg{bronze} Units
   \item A chosen Neutral \svg{bronze} Unit matching the player's Faction
 \end{itemize}
 
