--- a/draft-scenarios/campaigns/rampart_graduation_exercise.tex
+++ b/draft-scenarios/campaigns/rampart_graduation_exercise.tex
@@ -85,7 +85,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 Place Necropolis, Inferno, and Dungeon Heroes in their respective Faction Towns.
 Place Gelu on the center Field of the Rampart S4 Starting Map Tile.
 Place either Mephala or Clancy on an empty Field of the F10 Map Tile.
-Place the Pack of Medusas on the Far Map Tile as indicated in the Scenario map layout.
+Place the ``Pack'' of Medusas on the Far Map Tile as indicated in the Scenario map layout.
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 
@@ -166,7 +166,7 @@ During this Scenario:
       \includegraphics[width=\textwidth]{\maps/rampart_graduation_exercise.png}
     };
     \node at (1.3,-1.4) {\large{{\textbf{\textcolor{darkcandyapplered}{S4}}}}};
-    \node at (3.3,0.5) {\large{{\textbf{\textcolor{darkcandyapplered}{``Pack`'' of}}}}};
+    \node at (3.3,0.5) {\large{{\textbf{\textcolor{darkcandyapplered}{``Pack'' of}}}}};
     \node at (3.3,0) {\large{{\textbf{\textcolor{darkcandyapplered}{Medusas}}}}};
     \node at (15.6, -1.4) {\large{{\textbf{\textcolor{darkcandyapplered}{F10}}}}};
     \node at (3.5, -5.5) {\large{{\textbf{\textcolor{darkcandyapplered}{N3}}}}};
