--- a/draft-scenarios/clash/dragnarok.tex
+++ b/draft-scenarios/clash/dragnarok.tex
@@ -22,7 +22,7 @@
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item A ``Pack'' of the two cheapest \svg{bronze} Units
+  \item 2 × A ``Pack'' of the cheapest \svg{bronze} Units
   \item ``Few'' of the most expensive \svg{bronze} Units
 \end{itemize}
 
