--- a/draft-scenarios/clash/race_for_the_dragon_isle.tex
+++ b/draft-scenarios/clash/race_for_the_dragon_isle.tex
@@ -23,7 +23,7 @@
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item ``Few'' of the two cheapest \svg{bronze} Units
+  \item 2 ×``Few'' of the cheapest \svg{bronze} Units
 \end{itemize}
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling
