--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -20,7 +20,7 @@ This Scenario plays out over 13 Rounds.
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item ``Few'' of the cheapest \svg{silver} Units
+  \item ``Few'' of chosen \svg{silver} Units
 \end{itemize}
 
 \textbf{Town Buildings:}
