--- a/draft-scenarios/alliances/gold_rush.tex
+++ b/draft-scenarios/alliances/gold_rush.tex
@@ -23,7 +23,7 @@ This Scenario is played over 13 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A ``Pack'' of the most expensive \svg{bronze} Units
+  \item A ``Pack'' of chosen \svg{bronze} Units
   \item ``Few'' of the cheapest \svg{silver} Units
 \end{itemize}
 
