--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -13,20 +13,21 @@ This Scenario plays out over 13 Rounds.
 \subsection*{\MakeUppercase{Player Setup}}
 \textbf{Player Count:} 2 -- 4
 
-\textbf{Starting Resources:} 12 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
+\textbf{Starting Resources:} 14 \svg{gold}, 2 \svg{building_materials}, 0 \svg{valuables}
 
 \textbf{Starting Income:} 10 \svg{gold}, 0 \svg{building_materials}, 0 \svg{valuables}
 
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item A Pack of chosen \svg{bronze} Units
+  \item ``Few'' of the cheapest \svg{silver} Units
 \end{itemize}
 
 \textbf{Town Buildings:}
 \begin{itemize}
-  \item Each player may build the \svg{building_special_tent} building at a discount of 2 \svg{gold} and 2 \svg{building_materials}.
-  \item \svg{bronze} Dwelling and 2 \svg{gold} \textbf{or} \\ Mage Guild and 1 \svg{valuables}.
+  \item Each player may build the \svg{building_special_tent} building at a discount of 2~\svg{gold} and 2~\svg{building_materials}, \textbf{or} gain 4~\svg{gold}.
+  \item Citadel and gain 2~\svg{gold}, \textbf{or} \\
+    Mage Guild and gain 2~\svg{valuables}.
 \end{itemize}
 
 \textbf{Map Tile Pool:} Each player takes 3 Far (II–III) Map Tiles.
@@ -73,7 +74,7 @@ If no one controls a Dragon Utopia, all players lose.
 \end{itemize}
 \textbf{End of \nth{10} Round:}
 \begin{itemize}
-  \item The player(s) whose Main Hero has the least \svg{experience} roll(s) 2~\svg{resource}.
+  \item Player(s) whose Main Hero has the least \svg{experience} roll and resolve \svg{resource} twice.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
