--- a/campaigns/castle_sicilian_dragon.tex
+++ b/campaigns/castle_sicilian_dragon.tex
@@ -34,7 +34,7 @@ This Scenario plays out over 11 Rounds.
 
 \textbf{Faction:} Necropolis
 
-\textbf{Enemy Army:} A Pack of Skeletons, a Pack of Zombies, a Pack of Liches, a Few Dread Knights, a Few Ghost Dragons
+\textbf{Enemy Army:} A Pack of Skeletons, a Pack of Zombies, a Pack of Liches, a ``Few'' Dread Knights, a ``Few'' Ghost Dragons
 
 \textbf{Enemy Deck:} 3 × Might Cards, 3 × Magic Cards, 1 × Skill Card
 
@@ -213,7 +213,7 @@ Catherine smiled, reaching to clasp the arm of the angel in thanks for his work.
 She looked back at the ragtag group of forces she'd gathered and hoped it would be enough for a siege.
 
 \begin{itemize}
-  \item \textcolor{darkcandyapplered}{Add a Few Archangels to your army.}
+  \item \textcolor{darkcandyapplered}{Add a ``Few'' Archangels to your army.}
   \item \textcolor{darkcandyapplered}{You may now teleport to the enemy town on Tile S1.
     If you choose not to, you may in the future by spending one \svg{movement-red} at this Obelisk.}
 \end{itemize}
