--- a/campaigns/castle_two_knights_defense.tex
+++ b/campaigns/castle_two_knights_defense.tex
@@ -113,7 +113,7 @@ During this Castle campaign Scenario, the following rules apply:
 
   \item After defeating the neutral army at the Dragon Utopia, add a random dragon from the \svg{azure} Azure neutral Deck to your army.
   \item The enemy army follows the normal AI movement rules, stopping to capture Settlements and Mines, with its ultimate goal to reach the Dragon Utopia.
-  \item If the enemy army reaches the Dragon Utopia before you do, flip the Pack side of Dread Knights to Few and add a Pack of Ghost Dragons.
+  \item If the enemy army reaches the Dragon Utopia before you do, flip the Pack side of Dread Knights to ``Few'' and add a Pack of Ghost Dragons.
 \end{itemize}
 
 \begin{tikzpicture}[overlay]
@@ -159,7 +159,7 @@ The knights spent days tracking and catching up to us, and they mean to join us 
 Catherine smiled wide.
 ``Then tell them to get ready; the race is on.''
 
-\textcolor{darkcandyapplered}{Add a Few Champions to your army.}
+\textcolor{darkcandyapplered}{Add a ``Few'' Champions to your army.}
 
 \textbf{Checkmate}
 
