--- a/clash/bloody_grail.tex
+++ b/clash/bloody_grail.tex
@@ -97,7 +97,7 @@ During this Scenario:
   \item A player that chooses \textbf{Sacrifice} at an Obelisk gains the title of ``\textcolor{darkcandyapplered}{Blood Knight}.'' Place a red Faction Cube on their Hero portrait to mark this effect. A \textcolor{darkcandyapplered}{Blood Knight} may never choose the \textbf{Cleanse} option when Visiting an Obelisk.
   \item A player that chooses \textbf{Cleanse} at an Obelisk gains the title of ``\textcolor{cobalt}{Grail Knight}.'' Place a blue Faction Cube on their Hero portrait to mark this effect. A \textcolor{cobalt}{Grail Knight} may never choose the \textbf{Sacrifice} option when Visiting an Obelisk.
   \item When a player chooses \textbf{Sacrifice} at an Obelisk, place a number of Faction Cubes on the sacrificed Unit Card and on the Obelisk Field equivalent to the number of times the player has chosen the \textbf{Sacrifice} option. For example, if the player is sacrificing for the second time, place 2 Faction Cubes on the Unit Card and 2 Faction Cubes on the Obelisk Field.
-  \item A player who possesses the title of ``\textcolor{cobalt}{Grail Knight}'' may, after Visiting an Obelisk, Recruit an enemy Unit sacrificed at that Obelisk for half the cost (rounded down); if a Pack was sacrificed, the player may choose to Recruit Few instead.
+  \item A player who possesses the title of ``\textcolor{cobalt}{Grail Knight}'' may, after Visiting an Obelisk, Recruit an enemy Unit sacrificed at that Obelisk for half the cost (rounded down); if a Pack was sacrificed, the player may choose to Recruit ``Few'' instead.
   \item If a Unit Recruited at an Obelisk is defeated, remove it.
   \item A player who possesses no title or the title of ``\textcolor{darkcandyapplered}{Blood Knight}'' may not use the Diplomacy Ability Card. If a player who possesses no title or the title of ``\textcolor{darkcandyapplered}{Blood Knight}'' draws the Diplomacy Ability Card, they may show it to the other players, then discard it and draw a new Ability Card in its stead.
   \item A player who possesses the title of ``\textcolor{cobalt}{Grail Knight}'' may not use the Diplomacy Ability Card to Recruit Neutral \svg{azure} Units.
