--- a/campaigns/inferno_devilish_plan.tex
+++ b/campaigns/inferno_devilish_plan.tex
@@ -63,7 +63,7 @@ This Scenario plays out over 13 Rounds.
 \begin{itemize}
   \item \textbf{Army:}
     \begin{itemize}
-      \item A Few Elves
+      \item A ``Few'' Elves
       \item Neutral Army at the same Level as your Hero\footnote{See page 35, ``Field Difficulty Level Table'' in the Core Rulebook, for further details on the number of Neutral Units you have to draw for this Neutral Army.}
     \end{itemize}
   \item \textbf{AI Deck:}
@@ -150,7 +150,7 @@ You lose if any of the following occur:
 
 \textbf{\nth{9} Round:}
 \begin{itemize}
-  \item Reinforce the Few Elves in Ivor's army to a Pack of Elves.
+  \item Reinforce the ``Few'' Elves in Ivor's army to a Pack of Elves.
   \item Add an Ammo Cart to Ivor's Army.
 \end{itemize}
 
