--- a/campaigns/castle_greek_gift.tex
+++ b/campaigns/castle_greek_gift.tex
@@ -38,7 +38,7 @@ This Scenario plays out over 8 Rounds.
 
 \textbf{Faction:} Necropolis
 
-\textbf{Enemy Army:} A Pack of Skeletons, a Pack of Zombies, a ``Few'' Dread Knights, a ``Few'' Ghost Dragons
+\textbf{Enemy Army:} A ``Pack'' of Skeletons, a ``Pack'' of Zombies, a ``Few'' Dread Knights, a ``Few'' Ghost Dragons
 
 \textbf{Enemy Deck:} 4 × Might Cards
 
