--- a/campaigns/castle_sicilian_dragon.tex
+++ b/campaigns/castle_sicilian_dragon.tex
@@ -34,7 +34,7 @@ This Scenario plays out over 11 Rounds.
 
 \textbf{Faction:} Necropolis
 
-\textbf{Enemy Army:} A Pack of Skeletons, a Pack of Zombies, a Pack of Liches, a ``Few'' Dread Knights, a ``Few'' Ghost Dragons
+\textbf{Enemy Army:} A ``Pack'' of Skeletons, a ``Pack'' of Zombies, a ``Pack'' of Liches, a ``Few'' Dread Knights, a ``Few'' Ghost Dragons
 
 \textbf{Enemy Deck:} 3 × Might Cards, 3 × Magic Cards, 1 × Skill Card
 
