--- a/campaigns/inferno_devilish_plan.tex
+++ b/campaigns/inferno_devilish_plan.tex
@@ -150,7 +150,7 @@ You lose if any of the following occur:
 
 \textbf{\nth{9} Round:}
 \begin{itemize}
-  \item Reinforce the ``Few'' Elves in Ivor's army to a Pack of Elves.
+  \item Reinforce the ``Few'' Elves in Ivor's army to a ``Pack'' of Elves.
   \item Add an Ammo Cart to Ivor's Army.
 \end{itemize}
 
