Packs in tables

--- a/campaigns/inferno_deal_with_the_devil.tex
+++ b/campaigns/inferno_deal_with_the_devil.tex
@@ -243,23 +243,23 @@ They are fools to think these will help them overcome our Kreegan fortress.
     \begin{tabularx}{0.95\linewidth}{>{\centering}p{0.12\linewidth}>{\raggedright\arraybackslash}p{0.25\linewidth}>{\centering\arraybackslash}X>{\centering\arraybackslash}p{0.28\linewidth}}
       \darkcell{Enemy} & \darkcell{Units} & \darkcell{AI Deck} & \darkcell{Artifacts/Abilities} \\
       \darkcellleft[2.8]{Rampart Charging Army \#1}
-      & \lightcellleft[2.8]{``Few'' Unicorns\\Pack of Pegasi\\Pack of Elves\\Pack of Dwarves\\``Few'' Centaurs}
+      & \lightcellleft[2.8]{``Few'' Unicorns\\``Pack'' of Pegasi\\``Pack'' of Elves\\``Pack'' of Dwarves\\``Few'' Centaurs}
       & \makebox[129pt][r]{\multirow{4}{*}[12.65ex]{\lightcellleft[11.75]{3~×~Might \svg[12]{might-yellow} Card\\2~×~Skill \svg{skill-yellow} Card \\\phantom{.}\\ \textit{Armies use the same Deck. Reshuffle after every Combat.}}}}
       & \makebox[147pt][r]{\multirow{4}{*}[12.65ex]{\lightcellleft[11.75]{1~×~Shield~of~the Damned \textit{(Top effect)}\\1~×~Sword~of~Hellfire \textit{(Top effect)}\\\phantom{.}\\ \textit{Armies use the same Deck. Reshuffle after every Combat.}}}} \\
       \darkcellleft[2.8]{Castle Charging Army \#1}
-      & \lightcellleft[2.8]{``Few'' Champions\\Pack of Zealots\\Pack of Griffins\\Pack of Elves\\Pack of Marksmen}
+      & \lightcellleft[2.8]{``Few'' Champions\\``Pack'' of Zealots\\``Pack'' of Griffins\\``Pack'' of Elves\\``Pack'' of Marksmen}
       &
       & \\
       \darkcellleft[2.8]{Rampart Charging Army \#2}
-      & \lightcellleft[2.8]{Pack of Unicorns\\Pack of Dendroids\\``Few'' Pegasi\\Pack of Elves\\Pack of Dwarves}
+      & \lightcellleft[2.8]{``Pack'' of Unicorns\\``Pack'' of Dendroids\\``Few'' Pegasi\\``Pack'' of Elves\\``Pack'' of Dwarves}
       &
       & \\
       \darkcellleft[2.8]{Castle Charging Army \#2}
-      & \lightcellleft[2.8]{Pack of Champions\\Pack of Zealots\\``Few'' Crusaders\\``Few'' Griffins\\Pack of Halberdiers}
+      & \lightcellleft[2.8]{``Pack'' of Champions\\``Pack'' of Zealots\\``Few'' Crusaders\\``Few'' Griffins\\``Pack'' of Halberdiers}
       &
       & \\
       \darkcellleft[4.4]{Final Charging Army}
-      & \lightcellleft[4.4]{``Few'' Archangels\\Pack of Unicorns\\Pack of Champions\\Pack of Zealots\\Pack of Griffins\\Ballista War Machine}
+      & \lightcellleft[4.4]{``Few'' Archangels\\``Pack'' of Unicorns\\``Pack'' of Champions\\``Pack'' of Zealots\\``Pack'' of Griffins\\Ballista War Machine}
       & \lightcellleft[4.4]{3~×~Might \svg[12]{might-yellow} Card\\3~×~Skill \svg{skill-yellow} Card}
     & \lightcellleft[4.4]{1~×~Shield~of~the Damned \textit{(Top effect)}\\1~×~Sword~of~Hellfire \textit{(Top effect)}\\1~×~Ballistics \textit{(Basic effect)}\\1~×~First~Aid \textit{(Expert effect)}} \\ \end{tabularx}
   }
