--- a/campaigns/inferno_devilish_plan.tex
+++ b/campaigns/inferno_devilish_plan.tex
@@ -34,7 +34,7 @@ This Scenario plays out over 13 Rounds.
 
 \begin{itemize}
   \item A ``Pack'' of Familiars
-  \item ``Few'' Magogs
+  \item A ``Few'' Magogs
 \end{itemize}
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling, City Hall
