--- a/campaigns/inferno_steadwicks_fall.tex
+++ b/campaigns/inferno_steadwicks_fall.tex
@@ -29,8 +29,8 @@ This Scenario plays out over 16 Rounds.
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item ``Few'' Troglodytes
-  \item ``Few'' Evil Eyes
+  \item A ``Few'' Troglodytes
+  \item A ``Few'' Evil Eyes
   \item A ``Pack'' of Familiars
 \end{itemize}
 
