--- a/clash/the_hunt.tex
+++ b/clash/the_hunt.tex
@@ -24,7 +24,7 @@ This Scenario is played over 14 Rounds.
 \textbf{Starting Units:}
 \begin{itemize}
   \item A ``Pack'' of the cheapest\svg{bronze} Units
-  \item ``Few'' of the most expensive \svg{bronze} Units
+  \item A ``Few'' of the most expensive \svg{bronze} Units
 \end{itemize}
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling, City Hall
