--- a/coops/emerald_island.tex
+++ b/coops/emerald_island.tex
@@ -25,7 +25,7 @@ This Scenario is played over 8 Rounds.
 \textbf{Starting Units:}
 \begin{itemize}
   \item A ``Pack'' of chosen \svg{bronze} Units
-  \item ``Few'' of chosen \svg{bronze} Units
+  \item A ``Few'' of chosen \svg{bronze} Units
 \end{itemize}
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling
