--- a/campaigns/inferno_deal_with_the_devil.tex
+++ b/campaigns/inferno_deal_with_the_devil.tex
@@ -33,7 +33,7 @@ This Scenario plays out over 14 Rounds.
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item ``Few'' Magogs
+  \item A ``Few'' Magogs
   \item A ``Pack'' of Familiars
   \item A ``Pack'' of Cerebri
 \end{itemize}
