--- a/clash/bloody_grail.tex
+++ b/clash/bloody_grail.tex
@@ -21,7 +21,7 @@ This Scenario is played over 13 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item ``Few'' \svg{bronze} Units with the \textit{highest} Recruitment cost
+  \item A ``Few'' \svg{bronze} Units with the \textit{highest} Recruitment cost
   \item A ``Pack'' of \svg{bronze} Units with the \textit{lowest} Recruitment cost
 \end{itemize}
 
