--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -27,7 +27,7 @@ This Scenario is played over 12 Rounds.
 \textbf{Starting Units:}
 \begin{itemize}
   \item A ``Pack'' of the cheapest \svg{bronze} Units
-  \item ``Few'' of the most expensive \svg{bronze} Units
+  \item A ``Few'' of the most expensive \svg{bronze} Units
 \end{itemize}
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling, Citadel
