--- a/coops/stand_united.tex
+++ b/coops/stand_united.tex
@@ -23,8 +23,8 @@ This Scenario is played over 9 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item ``Few'' of the cheapest \svg{bronze} Units
-  \item ``Few'' of the cheapest \svg{silver} Units
+  \item A ``Few'' of the cheapest \svg{bronze} Units
+  \item A ``Few'' of the cheapest \svg{silver} Units
 \end{itemize}
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling
