--- a/coops/titans_stronghold.tex
+++ b/coops/titans_stronghold.tex
@@ -29,7 +29,7 @@ This Scenario is played over 16 Rounds (15 on Impossible difficulty).
 \textbf{Starting Units:}
 \begin{itemize}
   \item A ``Pack'' of chosen \svg{bronze} Units
-  \item A ``Few'' of chosen \svg{bronze} Units
+  \item A ``Few'' chosen \svg{bronze} Units
 \end{itemize}
 
 \textbf{Town Buildings:} None
