A few after all

--- a/draft-scenarios/alliances/brothers_in_arms.tex
+++ b/draft-scenarios/alliances/brothers_in_arms.tex
@@ -22,8 +22,8 @@
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item ``Few'' of the cheapest \svg{bronze} Units
-  \item ``Few'' of the cheapest \svg{silver} Units
+  \item A ``Few'' of the cheapest \svg{bronze} Units
+  \item A ``Few'' of the cheapest \svg{silver} Units
 \end{itemize}
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling
@@ -32,7 +32,7 @@
 Choose one:
 \begin{itemize}
   \item Search (3) the Ability Deck
-  \item A Few \svg{bronze} Units of the second highest Recruitment cost
+  \item A ``Few'' \svg{bronze} Units of the second highest Recruitment cost
 \end{itemize}
 
 \textbf{Map Tile Pool:} Each player takes one random Far (II–III) Map Tile.
