--- a/draft-scenarios/campaigns/rampart_graduation_exercise.tex
+++ b/draft-scenarios/campaigns/rampart_graduation_exercise.tex
@@ -35,7 +35,7 @@ This Scenario plays out over 13 Rounds.
 
 \textbf{Starting Income:} 10 \svg{gold}, 0 \svg{building_materials}, 0 \svg{valuables}
 
-\textbf{Starting Units:} ``Few'' Centaurs, ``Few'' Dwarves, a ``Pack'' of Elves and ``Few'' Pegasi
+\textbf{Starting Units:} A ``Few'' Centaurs, a ``Few'' Dwarves, a ``Pack'' of Elves and a ``Few'' Pegasi
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling, \svg{silver} Dwelling, Mystic Pond
 
@@ -166,8 +166,8 @@ During this Scenario:
       \includegraphics[width=\textwidth]{\maps/rampart_graduation_exercise.png}
     };
     \node at (1.3,-1.4) {\large{{\textbf{\textcolor{darkcandyapplered}{S4}}}}};
-    \node at (3.3,0.5) {\large{{\textbf{\textcolor{darkcandyapplered}{``Pack'' of}}}}};
-    \node at (3.3,0) {\large{{\textbf{\textcolor{darkcandyapplered}{Medusas}}}}};
+    \node at (3.2, 0.5) {\large{{\textbf{\textcolor{darkcandyapplered}{``Pack'' of}}}}};
+    \node at (3.3, 0) {\large{{\textbf{\textcolor{darkcandyapplered}{Medusas}}}}};
     \node at (15.6, -1.4) {\large{{\textbf{\textcolor{darkcandyapplered}{F10}}}}};
     \node at (3.5, -5.5) {\large{{\textbf{\textcolor{darkcandyapplered}{N3}}}}};
     \node at (15.6, -5.5) {\large{{\textbf{\textcolor{darkcandyapplered}{N5}}}}};
