--- a/draft-scenarios/clash/king_of_the_hill.tex
+++ b/draft-scenarios/clash/king_of_the_hill.tex
@@ -21,7 +21,7 @@ This Scenario plays out over 6 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item ``Few'' of cheapest \svg{silver} Units
+  \item A ``Few'' of the cheapest \svg{silver} Units
 \end{itemize}
 
 \textbf{Town Buildings:}
