--- a/draft-scenarios/clash/secret_bomb_stash.tex
+++ b/draft-scenarios/clash/secret_bomb_stash.tex
@@ -23,8 +23,8 @@ This Scenario is played over 8 Rounds, with up to 4 additional tie-breaking Roun
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item 2 × ``Few'' of the cheapest \svg{bronze} Units
-  \item ``Few'' of the cheapest \svg{silver} Units
+  \item 2 × A ``Few'' of the cheapest \svg{bronze} Units
+  \item A ``Few'' of the cheapest \svg{silver} Units
 \end{itemize}
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling, \svg{silver} Dwelling, Citadel, Mage Guild
