--- a/draft-scenarios/alliances/gold_rush.tex
+++ b/draft-scenarios/alliances/gold_rush.tex
@@ -24,7 +24,7 @@ This Scenario is played over 13 Rounds.
 \textbf{Starting Units:}
 \begin{itemize}
   \item A ``Pack'' of chosen \svg{bronze} Units
-  \item ``Few'' of the cheapest \svg{silver} Units
+  \item A ``Few'' of the cheapest \svg{silver} Units
 \end{itemize}
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling, Citadel
