--- a/draft-scenarios/clash/arcane_artillery.tex
+++ b/draft-scenarios/clash/arcane_artillery.tex
@@ -22,7 +22,7 @@ This Scenario is played over 12 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item ``Few'' of chosen \svg{bronze} Units
+  \item A ``Few'' chosen \svg{bronze} Units
   \item A ``Pack'' of chosen \svg{bronze} Units
 \end{itemize}
 
