--- a/draft-scenarios/clash/treasure_island.tex
+++ b/draft-scenarios/clash/treasure_island.tex
@@ -22,7 +22,7 @@ This Scenario plays out over 12 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item ``Few'' of the most expensive \svg{bronze} Units
+  \item A ``Few'' of the most expensive \svg{bronze} Units
   \item A ``Pack'' of the cheapest \svg{bronze} Units
 \end{itemize}
 
