--- a/draft-scenarios/campaigns/rampart_graduation_exercise.tex
+++ b/draft-scenarios/campaigns/rampart_graduation_exercise.tex
@@ -189,17 +189,17 @@ During this Scenario:
     \begin{tabularx}{0.95\linewidth}{>{\centering}p{0.15\linewidth}>{\raggedright\arraybackslash}X>{\centering\arraybackslash}X>{\centering\arraybackslash}X}
       \darkcell{Faction} & \darkcell{Units} & \darkcell{AI Deck} & \darkcell{Spells} \\
       \darkcell[2.8]{Necropolis}
-      & \lightcell[2.8]{``Pack'' of Zombies\\``Pack'' of Wraiths\\``Pack'' of Liches\\``Few'' Dread Knights\\Walls and Gate}
-      & \lightcell[2.8]{1~×~Might \svg{might-yellow} Card\\3~×~Magic \svg{magic-yellow} Card}
-      & \lightcell[2.8]{1~×~Resurrection\\1~×~Haste\\1~×~Weakness} \\
+      & \lightcellleft[2.8]{``Pack'' of Zombies\\``Pack'' of Wraiths\\``Pack'' of Liches\\``Few'' Dread Knights\\Walls and Gate}
+      & \lightcellleft[2.8]{1~×~Might \svg{might-yellow} Card\\3~×~Magic \svg{magic-yellow} Card}
+      & \lightcellleft[2.8]{1~×~Resurrection\\1~×~Haste\\1~×~Weakness} \\
       \darkcell[2.8]{Inferno}
-      & \lightcell[2.8]{``Pack'' of Magogs\\``Pack'' of Cerberi\\``Pack'' of Pit Lords\\``Few'' Efreet\\Walls and Gate}
-      & \lightcell[2.8]{3~×~Might \svg{might-yellow} Card\\1~×~Magic \svg{magic-yellow} Card}
-      & \lightcell[2.8]{1~×~Fireball} \\
+      & \lightcellleft[2.8]{``Pack'' of Magogs\\``Pack'' of Cerberi\\``Pack'' of Pit Lords\\``Few'' Efreet\\Walls and Gate}
+      & \lightcellleft[2.8]{3~×~Might \svg{might-yellow} Card\\1~×~Magic \svg{magic-yellow} Card}
+      & \lightcellleft[2.8]{1~×~Fireball} \\
       \darkcell[3.2]{Dungeon}
-      & \lightcell[3.2]{``Pack'' of Harpies\\``Pack'' of Evil Eyes\\``Pack'' of Medusas\\``Few'' Manticores\\``Few'' Black Dragons\\Walls and Gate}
-      & \lightcell[3.2]{3~×~Might \svg{might-yellow} Card\\3~×~Magic \svg{magic-yellow} Card}
-      & \lightcell[3.2]{1~×~Magic Arrow\\1~×~Slow\\1~×~Sorrow} \\
+      & \lightcellleft[3.2]{``Pack'' of Harpies\\``Pack'' of Evil Eyes\\``Pack'' of Medusas\\``Few'' Manticores\\``Few'' Black Dragons\\Walls and Gate}
+      & \lightcellleft[3.2]{3~×~Might \svg{might-yellow} Card\\3~×~Magic \svg{magic-yellow} Card}
+      & \lightcellleft[3.2]{1~×~Magic Arrow\\1~×~Slow\\1~×~Sorrow} \\
     \end{tabularx}
   }
 \end{table*}
