--- a/coops/close_to_enemies.tex
+++ b/coops/close_to_enemies.tex
@@ -62,7 +62,7 @@ Prepare an AI Deck for Settlement defenders.
 
 \textbf{Settlement defenders Deck:} 1 × Attack Card, 1 × Defense Card, 1 × Spell Card
 
-\textbf{Settlement defenders Spell Deck:} 1~×~Magic Arrow
+\textbf{Settlement defenders Spell Deck:}\\1~×~Magic Arrow
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 
