--- a/campaigns/inferno_deal_with_the_devil.tex
+++ b/campaigns/inferno_deal_with_the_devil.tex
@@ -245,7 +245,7 @@ They are fools to think these will help them overcome our Kreegan fortress.
       \darkcellleft[2.8]{Rampart Charging Army \#1}
       & \lightcellleft[2.8]{``Few'' Unicorns\\``Pack'' of Pegasi\\``Pack'' of Elves\\``Pack'' of Dwarves\\``Few'' Centaurs}
       & \makebox[129pt][r]{\multirow{4}{*}[12.65ex]{\lightcellleft[11.75]{3~×~Might \svg[12]{might-yellow} Card\\2~×~Skill \svg{skill-yellow} Card \\\phantom{.}\\ \textit{Armies use the same Deck. Reshuffle after every Combat.}}}}
-      & \makebox[147pt][r]{\multirow{4}{*}[12.65ex]{\lightcellleft[11.75]{1~×~Shield~of~the Damned \textit{(Top effect)}\\1~×~Sword~of~Hellfire \textit{(Top effect)}\\\phantom{.}\\ \textit{Armies use the same Deck. Reshuffle after every Combat.}}}} \\
+      & \makebox[147pt][r]{\multirow{4}{*}[12.65ex]{\lightcellleft[11.75]{1~×~Shield~of~the Damned \textit{(Top effect)}\\1~×~Sword~of~Hellfire \textit{(Top effect)}\\\phantom{.}\\ \textit{Armies use the same Deck.~Reshuffle after every Combat.}}}} \\
       \darkcellleft[2.8]{Castle Charging Army \#1}
       & \lightcellleft[2.8]{``Few'' Champions\\``Pack'' of Zealots\\``Pack'' of Griffins\\``Pack'' of Elves\\``Pack'' of Marksmen}
       &
