--- a/clash/the_hunt.tex
+++ b/clash/the_hunt.tex
@@ -42,6 +42,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
   \item 2 × Near (IV--V) Map Tile
   \item 1 × Center (VI--VII) Map Tile
 \end{itemize}
+\columnbreak
 
 \textbf{For a 3-player Scenario:}
 \begin{itemize}
